# STR

P1/: CMakeLists.txt
P1/src/: ClasesPosix.cpp  ClasesPosix.h
P10/: ClasesPosix.cpp  ClasesPosix.h  DesactivarCores.sh  compilarP5.sh  p5  p5.cpp  tareas_p10
P2/: ClasesPosix.cpp  prueba.cpp
P3/: ClasesPosix.h  p1  p1.cpp  pila_acotada.cpp  pila_acotada.h
P4/: barrera.cpp  p2_1  p2_1.cpp
P5/: p3  p3.cpp
P6/src/: p1  p1.adb  p1.ali  pila_acotada.adb  pila_acotada.ads  pila_acotada.ali
P7/p2_1/src/: p2_1  p2_1.adb  p2_1.ali  paquetebarrera.adb  paquetebarrera.ads  paquetebarrera.ali
P7/p2_2/src/: controlador.adb  controlador.ads  controlador.ali  p2_2  p2_2.adb  p2_2.ali
P8/: p3.gpr
P8/src/: compilarP3.sh  controlador.ali  p3  p3.adb  p3.ali
P9/: ClasesPosix.cpp  ClasesPosix.h  compilarP4.sh  p4  p4.cpp
p4/: barrera.cpp  barrera.h  p2_1  p2_1.cpp  p2_2  p2_2.cpp
